[project]
name = "asbar-parser"
version = "0.1.0"
description = "Parses Android SMS Backup and Restore .xml files to extract media and format the text messages."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=5.3.1",
    "pdfkit>=1.0.0",
]

[project.scripts]
asbar = "main:start"
