[project]
name = "asbar-parser"
version = "0.1.3"
description = "Parses Android SMS Backup and Restore .xml files to extract media and format the text messages."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "just-heic>=0.0.0",
    "lxml>=5.3.1",
    "pdfkit>=1.0.0",
]

[project.scripts]
asbar = "main:start"

[tool.setuptools.package-data]
"*" = ["*.xslt"]
