[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asbar-parser"
version = "0.1.5"
description = "Parses Android SMS Backup and Restore .xml files to extract media and format the text messages."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "just-heic>=0.0.0",
    "lxml>=5.3.1",
    "playwright>=1.52.0",
]

[project.scripts]
asbar = "asbar.main:start"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
asbar = ["__assets__/*.xslt", "__assets__/*.ttf"]
